# audio-transcript

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: bot.py  config.py  db.py  main.py  prompts.py
app/providers/: llm.py  stt.py
audio_transcript_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 001_init.sql  002_allowlist.sql
